# creview

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bootstrap.sh
creview/: CMakeLists.txt  creview-server.json  main.cpp
hints/: CMakeLists.txt  hints-server.json  hints-tests  main.cpp  timespan.h  timestamp.h
hints/android/app/: build.gradle
hints/android/app/src/androidTest/java/com/data/hints/: ApplicationTest.java
hints/android/app/src/main/: AndroidManifest.xml
hints/android/app/src/main/java/com/data/hints/: MainActivity.java  TaskEditFragment.java
hints/android/app/src/main/res/layout/: activity_main.xml  fragment_main.xml  view_task_edit.xml
hints/android/app/src/main/res/menu/: menu_main.xml
hints/android/app/src/main/res/values/: strings.xml
hints/db/: CMakeLists.txt  Database.cpp  Database.h
hints/net/: CMakeLists.txt  RequestHandler.h  ServerRequest.h  http_status.h  request_handler.h  request_handler_factory.cpp  request_handler_factory.h  request_handler_registry.cpp  request_handler_registry.h  server_request_impl.cpp  server_request_impl.h  server_response.h  server_response_impl.cpp  server_response_impl.h
hints/net/tests/: CMakeLists.txt  hints-net-tests  main.cpp
hints/net/tests/url/: mapper_tests.cpp  segment_tests.cpp
hints/net/url/: mapper.cpp  mapper.h  path.cpp  path.h  segment.cpp  segment.h
hints/planner/: day_of_week.h  planner.h  task.h  task_status.h
hints/resources/: CMakeLists.txt  TaskResource.cpp  TaskResource.h
hints/scheduler/: CMakeLists.txt  scheduler.h  scheduler_impl.cpp  scheduler_impl.h
(+33 files in other folders)
